RESOLVED FIXED49193
NPN_Evaluate doesn't work with out-of-process plugins in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=49193
Summary NPN_Evaluate doesn't work with out-of-process plugins in WebKit2
Anders Carlsson
Reported 2010-11-08 11:18:57 PST
Add NPN_Evaluate
Attachments
Patch (8.20 KB, patch)
2010-11-08 11:21 PST, Anders Carlsson
aroben: review+
Anders Carlsson
Comment 1 2010-11-08 11:21:52 PST
Anders Carlsson
Comment 2 2010-11-08 11:27:44 PST
Note You need to log in before you can comment on or make changes to this bug.