NPN_Evaluate doesn't work with out-of-process plugins in WebKit2 https://bugs.webkit.org/show_bug.cgi?id=49193

Reviewed by Adam Roben.

WebKit2:

* PluginProcess/PluginControllerProxy.cpp:
(WebKit::PluginControllerProxy::evaluate):
Send an Evaluate message.

* WebProcess/Plugins/PluginProxy.cpp:
(WebKit::PluginProxy::evaluate):
Call Evaluate on the plug-in proxy.

* WebProcess/Plugins/PluginProxy.h:
* WebProcess/Plugins/PluginProxy.messages.in:
Add Evaluate message.

LayoutTests:

Remove now passing tests.

* platform/mac-wk2/Skipped:

Canonical link: https://commits.webkit.org/62038@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71551 268f45cc-cd09-0410-ab3c-d52691b4dbfc